--- a/UnderstandingAnalysis/temp.tex
+++ b/UnderstandingAnalysis/temp.tex
@@ -10,11 +10,12 @@
 \newcommand{\pow}{\mathcal{P}}
 
 % TODO: replace these with your information
+% TODO: replace these with your information
 \newcommand{\hwname}{Evan Fox}
 \newcommand{\hwemail}{efox20@uri.edu}
-\newcommand{\hwtype}{Homework}
-\newcommand{\hwnum}{7}
-\newcommand{\hwclass}{MTH 307}
+\newcommand{\hwtype}{Chapter}
+\newcommand{\hwnum}{1}
+\newcommand{\hwclass}{Understanding Analysis}
 \newcommand{\hwlecture}{}
 \newcommand{\hwsection}{}
 
