--- a/UnderstandingAnalysis/CHP_1.tex
+++ b/UnderstandingAnalysis/CHP_1.tex
@@ -137,6 +137,16 @@ The triangle inequality is given by $|a+b| \leq |a| + |b| $.
 % Your content
 
 \question
+Given a function $f$ and a subset of its domain $A$, let $f[a]$ denote the range of $f$ over $A$, i.e., $f[a] = \{f(x) | x \in A \} $
 
+\begin{alphaparts}
+    \questionpart
+    let $f: \R \to \R$ given by $f(x) = x^2$. Let $A = [0, 2]$ and let $B = [1, 4]$. Does $f[A \cap B] = f[A] \cap f[B]$? What about $f[A \cup B] = f[A] \cup f[B]$? 
+
+    Both parts of this question are true. First I prove $f[A \cap B] = f[A] \cap f[B]$. First note that $A \cap B = [1, 2]$ then we may compute the range of $f$ on this domain and we get that $\ran f = [1, 4]$. 
+    \begin{proof}
+       
+    \end{proof}
+\end{alphaparts}
 
 \end{document}
