--- a/UnderstandingAnalysis/CHP_1.tex
+++ b/UnderstandingAnalysis/CHP_1.tex
@@ -77,7 +77,7 @@ The first part of chapter one just went over some prelims/reviews. Here are my s
     \begin{proof}
     We use contradiction, so assume that there exists $r \in \Q$ such that $2^r = 3$. Then since $r$ is rational by assumption we may fix $m, n \in \Q$ such that $r = \frac{m}{n}$. Substituting in for $r$ gives
     
-    \[ 2^{\frac{m}{n} = 3} \] 
+    \[ 2^{\frac{m}{n}}  = 3\] 
     
     then we raise both sides to the $n^{\text{th}}$ power and get 
     
@@ -185,8 +185,11 @@ Given a function $f$ and a subset of its domain $A$, let $f[A]$ denote the range
         that $y \in g[A]$ then $y \in g[B]$ must be true and the argument is the same. 
     \end{proof}
 
-    
+
 
 \end{alphaparts}
+
+\question
+
 
 \end{document}
