--- a/UnderstandingAnalysis/CHP_1.tex
+++ b/UnderstandingAnalysis/CHP_1.tex
@@ -10,8 +10,8 @@
 \newcommand{\pow}{\mathcal{P}}
 
 % TODO: replace these with your information
-\newcommand{\hwname}{Evan Fox}
-\newcommand{\hwemail}{efox20@uri.edu}
+\newcommand{\hwname}{}
+\newcommand{\hwemail}{}
 \newcommand{\hwtype}{Chapter}
 \newcommand{\hwnum}{1}
 \newcommand{\hwclass}{Understanding Analysis}
@@ -45,7 +45,7 @@ The first part of chapter one just went over some prelims/reviews. Here are my s
             \begin{proof}
                 For the sake of contradiction, assume that $\sqrt{3} \in \Q$. Then we may fix $m, n \in \Q$ such that $\sqrt{3} = \frac{m}{n}$. We then have that, 
                 
-                \[ 3 = \left(\frac{m}{n}\right)^2 \]\ 
+                \[ 3 = \left(\frac{m}{n}\right)^2 \] 
                 
                 by the fundamental theorem of arithmetic, we may write $m^2$ and $n^2$ in terms of their prime factors and cancel any factor(s) that they have in common, i.e., we reduce $\frac{m}{n}$ such that they have no common factors. Since $m$ and $n$ have no common factors we note that they cannot both be divisible by 3. Fist observe that 
                 \begin{equation}
