--- a/UnderstandingAnalysis/CHP_1.tex
+++ b/UnderstandingAnalysis/CHP_1.tex
@@ -68,7 +68,7 @@ The first part of chapter one just went over some prelims/reviews. Here are my s
         \questionpart
             Does a similar argument work to prove that $\sqrt{6} \notin \Q$? Where does the proof breakdown for $\sqrt{4}$?
             
-                Yes, weather or not this method works for $\sqrt{x}$ is related to the prime factorization of $x$, since the prime factors of 6 both have an exponent of 1, $6|m^2 \implies 6|m$ will hold. This is because if 2 and 3 are prime factors of $m^2$ then they will have to be prime factors of m, otherwise how would they have been prime factors of $m^2$? The point is squaring a number doesn't add new prime factors; it just multiples the exponent of each prime factor by 2. When we try to apply this argument to $\sqrt{4}$ the problem is that $4|m^2 \implies 4|m$ doesn't hold since the exponent of the prime factor of 4 is 2. To give an example note that $4|36 = 6^2 = 2^23^2$ but $4\nmid 6 = 3 (2) $. 
+                Yes, whether or not this method works for $\sqrt{x}$ is related to the prime factorization of $x$, since the prime factors of 6 both have an exponent of 1, $6|m^2 \implies 6|m$ will hold. This is because if 2 and 3 are prime factors of $m^2$ then they will have to be prime factors of m, otherwise how would they have been prime factors of $m^2$? The point is squaring a number doesn't add new prime factors; it just multiples the exponent of each prime factor by 2. When we try to apply this argument to $\sqrt{4}$ the problem is that $4|m^2 \implies 4|m$ doesn't hold since the exponent of the prime factor of 4 is 2. To give an example note that $4|36 = 6^2 = 2^23^2$ but $4\nmid 6 = 3 (2) $. 
     \end{alphaparts}
     
     \question
