--- a/UnderstandingAnalysis/CHP_1.2.tex
+++ b/UnderstandingAnalysis/CHP_1.2.tex
@@ -92,4 +92,12 @@ For each part either given an example or state that the request is impossible.
     Hence the assertion that all sets bounded above have a least upper bound implys that all sets bounded below have a greatest lower bound. 
 \end{alphaparts}
 
+\question 
+Let $A_1, A_2, A_2, ... $ be a collection of non empty sets that are bounded above. 
+
+\begin{alphaparts}
+    \questionpart
+    Find a formula for $\sup(A_1 \cup A_2)$ and extend it to finite unions 
+\end{alphaparts}
+
 \end{document}
