--- a/UnderstandingAnalysis/CHP_1.2.tex
+++ b/UnderstandingAnalysis/CHP_1.2.tex
@@ -45,7 +45,7 @@ Give a definition for greatest lower bound and prove a lemma analagous to 1.3.8
     Assume $l = \inf(A)$. Then note for all $\eps \geq 0$ that $l < l + \eps$. Then since $l$ is the greatest lower bound for $A$
     by definiton, we have that $l + \eps$ is not a lower bound. But then there must exist $a \in A$ such that $l + \eps > a$. 
 
-    To prove the Other direction assume we have $l \in \R$ such that $l$ is a lower bound for $A$ with the property that 
+    To prove the other direction assume we have $l \in \R$ such that $l$ is a lower bound for $A$ with the property that 
     for all $\eps > 0$ we have $l + \eps > a$ for some $a \in A$. For the sake of contradiction assume that we have $L \in \R$ such that $L > l$ and that $L = \inf(A)$. Then we note that by choosing $\eps = -l + L$
     we get that $L > a$ for some $a \in A$. Hence $L$ is not a lower bound for $A$ contradicting our assumtion. Hence $l = \inf(A)$.  
 \end{proof}
