--- a/ModernAlgebra/HW_1.tex
+++ b/ModernAlgebra/HW_1.tex
@@ -32,6 +32,7 @@ Let $G$ be a group such that for all $g \in G$, $g^2 = e$. Prove $G$ is Abelian
     \[ ab = (ab)^{-1} = b^{-1}a^{-1} \]
     by the socks-shoes property. But then since $g = g^{-1}$ for all $g \in G$
     \[ab = b^{-1}a^{-1} = ba \]
+    thus $G$ is Abelian. 
 \end{proof}
 
 \question
