Update to temps (commath)

--- a/ModernAlgebra/temp.tex
+++ b/ModernAlgebra/temp.tex
@@ -1,4 +1,5 @@
 \documentclass[11pt,largemargins]{homework}
+\usepackage{commath}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Q}{\mathbb{Q}}
