--- a/Probability/temp.tex
+++ b/Probability/temp.tex
@@ -9,6 +9,7 @@
 \newcommand{\ssd}{\bigtriangleup}
 \newcommand{\pow}{\mathcal{P}}
 \usepackage{qtree}
+\usepackage{commath}
 
 % TODO: replace these with your information
 % TODO: replace these with your information
