--- a/Probability/Worksheet_3.tex
+++ b/Probability/Worksheet_3.tex
@@ -89,7 +89,7 @@ Thus for $C = 3$, $f$ is a probability mass function as desired.
     \questionpart 
     We use the identity $V(X) = E(x^2) - E(x)^2$ to find the variance so 
 
-    \[V(X) = 2 -(\frac{4}{3})^2 = \frac{2}{9} \] 
+    \[V(X) = 2 -(\tfrac{4}{3})^2 = \frac{2}{9} \] 
 
 \end{alphaparts}
 
@@ -105,7 +105,7 @@ Thus for $C = 3$, $f$ is a probability mass function as desired.
     of $X$. For instance if $P(X = 1) = c$ and $c \neq 0$ then we should have $P(X \leq 0) < P(\leq 1)$ but this is not the case. 
 
     \questionpart 
-    We note  $P(-1 < X < 4) = P(-2 \leq X \leq 3)  = F(-2) - F(3) = 0.52$ 
+    We note  $P(-1 < X < 4) = F(-1) - F(4) = 0.52$ 
 
     \questionpart 
     To find $P(X > 2)$ we observe that $P(X \leq 2) + P(X > 2) = 1$ so $P(X > 2) = 1 - F(2) = 0.39$.  
