--- a/ModernAlgebra/HW_4.tex
+++ b/ModernAlgebra/HW_4.tex
@@ -1,4 +1,4 @@
-\documentclass[11pt,largemargins]{homework}
+\documentclass[11pt]{homework}
 \usepackage{commath}
 \newcommand{\R}{\mathbb{R}}
 \newcommand{\N}{\mathbb{N}}
