--- a/ModernAlgebra/notes.tex
+++ b/ModernAlgebra/notes.tex
@@ -23,30 +23,7 @@
 \begin{document}
 \maketitle
 
-\question
-Prove all subgroups of a cyclic group are cyclic 
-
-\begin{proof}
-Let $G$ be a group such that $<g> = G$ and let $H \leq G$. If $g \in H$ then it is clear $H = G$ and $H$ is cyclic. So 
-Assume $g \notin H$. Then we write the elements of $H$ 
-
-\[H = \{e, g^{\alpha_1}, g^{\alpha_2}, g^{\alpha_3}, ... \} \] 
-
-To prove $H$ is cyclic we show there exists $i \in \N$ such that for all $j \in \N$ 
-$\alpha_i | \alpha_j$. Let $S$ be the set of powers of $g$ in $H$ that is, $S = \{\alpha \in \N | g^\alpha \in H \}$. Then 
-$S$ is obviously non-empty so fix $\alpha$ as the least element of $S$. Then assume there exists $\beta \in S$ such that $\alpha$ does not 
-devide $\beta$, then using the divison algorithm we may write 
-\[ \beta = \alpha q + r  \] 
-For $0 < r < \alpha $ But this implies $g^{\beta} = g^{\alpha q}g^{r}$ so 
-
-\[g^{-\alpha q}g^{\beta} = g^r \] 
-so $r \in S$ but $r < \alpha $, a contradiction. Thus all positive exponents of $g$ in $H$ are multiples of $\alpha_i$, then since $g^{-x} \in H$ 
-iff $g^x \in H$ it follows that $<\alpha> = H$. 
-
-a $\neq$ b
-    
-\end{proof}
-
+\[  \begin{cases} \text{s.t.} \begin{pmatrix}  \end{pmatrix}  \end{cases}\, (, )\] 
 % Your content
-
+c
 \end{document}
